@@ -59,6 +59,7 @@ constant(name=Nullch)
 	OCI_FO_SESSION			= OCI_FO_SESSION
 	OCI_FO_SELECT			= OCI_FO_SELECT
 	OCI_FO_TXNAL			= OCI_FO_TXNAL
+	OCI_FO_RETRY			= OCI_FO_RETRY
 	OCI_STMT_SCROLLABLE_READONLY 	= 0x08
 	OCI_PRELIM_AUTH 		= 0x00000008
 	OCI_DBSTARTUPFLAG_FORCE 	= 0x00000001
